# scaling-robot

./: .gitignore  README.md  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
src/: consts.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/abis/: moo_token_hub.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: chain.rs  consts.rs  contracts.rs  error.rs  jito.rs  lib.rs  project.rs  state.rs  token.rs  utils.rs  wallet.rs
src-tauri/src/commands/: chain.rs  mod.rs  project.rs  tasks.rs  wallet.rs
src-tauri/src/jup/: mod.rs  quote.rs  route_plan_with_metadata.rs  swap.rs  transaction_config.rs
src-tauri/src/one_inch/: mod.rs
src-tauri/src/task/: mod.rs  worker.rs
src/app/: error.tsx  globals.css  layout.tsx  page.tsx  utils.ts
src/app/project/: page.tsx
src/app/splash/: page.tsx
src/app/task/: page.tsx
src/components/: ContentProviders.tsx  CopyButton.tsx  FileSelector.tsx  FormItem.tsx  IconButton.tsx  Providers.tsx  ProxyEditor.tsx  ProxyEditorTooltip.tsx  TextInput.tsx  Updater.tsx
src/components/project/: CreateModal.tsx  EditModal.tsx  ProjectPanel.tsx  Provider.tsx  WithdrawModal.tsx
src/components/task/: CreatePanel.tsx
src/components/token/: TokenInput.tsx
src/components/wallet/: AirdropModal.tsx  BatchWithdrawModal.tsx  CreateWalletGrpModal.tsx  WalletGroupPanel.tsx
src/hooks/: chain.ts  index.ts  project.ts  tasks.ts  wallet.ts
