[package]
name = "app"
version = "0.1.6"
description = "Moo Tools"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.79"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc.2", features = [] }

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.22"
bincode = "1.3"
bs58 = "0.5"
chrono = { version = "0.4", features = ["serde"] }
flate2 = "1.0"
log = "0.4"
once_cell = "1.19"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "gzip",
  "rustls-tls",
  "socks",
] }
reqwest_11 = { package = "reqwest", version = "0.11", default-features = false, features = [
  "json",
  "gzip",
  "rustls-tls",
  "socks",
] }
strum = { version = "0.26", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_qs = "0.13"
serde_with = "3.9"
solana-sdk = "2.0.5"
solana-client = "2.0.5"
solana-rpc-client = "2.0.5"
solana-program = "2.0.5"
spl-token = { version = "6.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "4.0", features = ["no-entrypoint"] }
mpl-token-metadata = "4.1"
tauri = { version = "2.0.0-rc.2", features = ["rustls-tls", "tray-icon"] }
tauri-plugin-clipboard-manager = "2.1.0-beta.7"
tauri-plugin-dialog = "2.0.0-rc.0"
tauri-plugin-fs = "2.0.0-rc.0"
tauri-plugin-log = { version = "2.0.0-rc.0", features = ["colored"] }
tauri-plugin-os = "2.0.0-rc.0"
tauri-plugin-shell = "2.0.0-rc.0"
thiserror = "1.0"
tokio = { version = "1.39", features = ["full"] }
alloy = { version = "0.2", features = ["full"] }
alloy-chains = "0.1"


# [patch.crates-io.aes-gcm-siv]
# git = "https://github.com/RustCrypto/AEADs"
# rev = "6105d7a5591aefa646a95d12b5e8d3f55a9214ef"

[patch.crates-io.curve25519-dalek]
git = "https://github.com/solana-labs/curve25519-dalek.git"
rev = "c14774464c4d38de553c6ef2f48a10982c1b4801"

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations.
opt-level = 3     # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort"   # Higher performance by disabling panic handlers.
strip = true      # Ensures debug symbols are removed.
